# goit-pythonweb-hw-12

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
docs/: conf.py  index.rst
migrations/versions/: c74cfeefcdd8_initial_migration.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/exceptions/: exceptions.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload.py  users.py
src/services/templates/: reset_password_email.html  verify_email.html
tests/: conftest.py  test_integration_api_auth.py  test_integration_api_contacts.py  test_integration_api_users.py  test_integration_api_utils.py  test_unit_repository_contacts.py  test_unit_repository_users.py  test_unit_services_auth.py  test_unit_services_cache.py  test_unit_services_contacts.py  test_unit_services_email.py  test_unit_services_upload.py  test_unit_services_users.py
