[project]
name = "goit-pythonweb-hw-12"
version = "0.1.0"
description = "HW-12"
authors = [
    {name = "Darina Khalina",email = "darina.khalina@namecheap.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
alembic-postgresql-enum = "^1.7.0"
pydantic = {extras = ["email"], version = "^2.11.1"}
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
exceptiongroup = "==1.2.2"
colorama = "==0.4.6"
async-timeout = "==5.0.1"
psycopg2-binary = "==2.9.10"
python-jose = "^3.4.0"
passlib = "^1.7.4"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.8.1"
cloudinary = "^1.43.0"
slowapi = "^0.1.9"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.2"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
aiosqlite = "^0.20.0"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
sphinx = "^8.1.3"


[tool.pytest.ini_options]
pythonpath = '.'
testpaths = ['tests']
filterwarnings = "ignore::DeprecationWarning"


[tool.coverage.run]
omit = [
    "src/schemas/*",
    "src/conf/*",
    "src/database/*",
    ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
